<resources>
    <string name="app_name">Audcode</string>
    <string name="search">Search</string>
    <string name="empty_text">It seems no data available for this tag , try to  make a new search </string>
    <string name="search_hint">no keyword placed</string>
    <string name="failure_unexpected_error">Something went wrong</string>
    <string name="failure_network_connection">No Network Connection.</string>
    <string name="failure_server_error">Server Error</string>
    <string name="signup">Sign up</string>
    <string name="full_name">Full Name</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="welcome_back">Welcome \n back</string>
    <string name="register_account">Create \n account</string>
    <string name="listen_to_tech"> Listen To \nTech Geeks</string>
    <string name="search_audcodes">Search for Summaries</string>
    <string name="subscribe">Subscribe</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_library">Library</string>
    <string name="menu_home">home</string>
    <string name="play">play</string>
    <string name="follow">follow</string>
    <string name="stop">stop</string>
    <string name="view_episode_link_failed">Cannot open this link at the moment, please try again later</string>
    <string name="share">Share</string>
    <string name="close">close</string>
    <string name="loading_dots">…</string>
    <string name="playback_channel_name">Now Playing</string>
    <string name="channel_name">channelName</string>
    <string name="channel_description">ChannelDescription</string>
    <string name="sign_out">Sign Out</string>
    <string name="ok">OK</string>
    <string name="prompt_login">You need to login first to use this feature</string>
    <string name="account_created">Account created successfully</string>
</resources>
